--- a/style.css
+++ b/style.css
@@ -67,26 +67,12 @@ body{
 .dino{
     margin-left: 4vw;
     margin-bottom: var(--height-dino);
-    bottom: 0;
     width: 2.6vw;
     /*animation: jump-animation 1s infinite ease-in;*/
 }
 .dino img{
     width: 3vw;
 }
-
-/*#player1{
-    background: rgba(255, 13, 13, 0.164);
-}
-#player2{
-    background: rgba(255, 0, 0, 0.253);
-}
-#player3{
-    background: rgba(252, 71, 71, 0.288);
-}
-#player4{
-    background: rgba(255, 0, 0, 0.26);
-}*/
 
 #top-right{
     background-color: rgb(255, 255, 215);
@@ -119,4 +105,34 @@ body{
         height: 100%;
         margin: 0;
     }
+}
+
+@media(max-width: 620px){
+    :root {
+        --border-color: rgb(0, 0, 0);
+        --height-dino: 3.6vh;
+        --heightJUMP-dino: 14vh;
+    }
+    body{
+        display: flex;
+        justify-content: end;
+        align-items: start;
+    }
+    .container{
+        flex-direction: column;
+        height: 100vh;
+    }
+    .dino{
+        margin-left: 4vw;
+        margin-bottom: var(--height-dino);
+        width: 2.6vw;
+    }
+    .dino img{
+        width: 8vw;
+    }
+    .screen{
+        width: 100vw;
+        height: 25vh;
+    }
+
 }
