--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 :root {
     --border-color: rgb(87, 87, 87);
     --height-dino: 8vh;
-    --heightJUMP-dino: 30vh;
+    --heightJUMP-dino: 25vh;
 }
 
 *{
@@ -42,26 +42,34 @@ body{
     overflow:hidden;
     animation: background-animation 10s infinite linear;
 }
-
+.score{
+    font-size: 23px;
+    color: var(--border-color);
+    opacity: 70%;
+    position: absolute;
+    top: 3vh;
+    right: 3vh;
+    font-family: gameplay;
+}
 .dino{
     position: absolute;
     margin-left: 4vw;
     margin-bottom: var(--height-dino);
-    width: 2.6vw;
+    width: 2vw;
 }
 
 .dino img{
-    width: 3vw;
+    width: 2.5vw;
 }
 
 .obstacle{
     position: absolute;
     opacity: 80%;
     margin-bottom: 8.5vh;
-    width: 2.6vw;
+    width: 2.5vw;
 }
 .obstacle img{
-    width: 3vw;
+    width: 2.5vw;
 }
 
 @keyframes obstacle-animation {
@@ -101,19 +109,12 @@ body{
     0%{
         margin-bottom: var(--height-dino);
     }
-    30%{
-        margin-bottom: var(--heightJUMP-dino -3vh);
-    }
     40%{
         transform: rotate(-10deg);
         margin-bottom: var(--heightJUMP-dino);
     }
-    80%{
-        transform: rotate(10deg);
-        margin-bottom: var(--height-dino);
-    }
-    100%{
-        transform: rotateX(45deg);
+    90%{
+        transform: rotate(0deg);
         margin-bottom: var(--height-dino);
     }
 }
@@ -143,7 +144,7 @@ body{
 @media(max-width: 620px){
     :root {
         --height-dino: 3.6vh;
-        --heightJUMP-dino: 19vh;
+        --heightJUMP-dino: 17vh;
     }
     body{
         display: flex;
@@ -157,7 +158,7 @@ body{
     .dino{
         margin-left: 4vw;
         margin-bottom: var(--height-dino);
-        width: 2.6vw;
+        width: 6.5vw;
     }
     .dino img{
         width: 8vw;
@@ -167,11 +168,16 @@ body{
         height: 25vh;
     }
     .obstacle{
-        margin-bottom: 4.1vh;
+        margin-bottom: 4.0vh;
         width: 6vw;
         animation: obstacle-animation 4s linear infinite;
     }
     .obstacle img{
         width: 8vw;
+    }
+
+    .score{
+        font-size: 15px;
+        opacity: 70%;
     }
 }
