--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 }
 
 body{
+    font-family: gameplay;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -49,7 +50,6 @@ body{
     position: absolute;
     top: 3vh;
     right: 3vh;
-    font-family: gameplay;
 }
 .dino{
     position: absolute;
@@ -93,6 +93,19 @@ body{
 }
 #bottom-right{
     background-color: rgb(255, 231, 254);
+}
+.gameOverTela{
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    text-shadow: 3px 3px 0px rgb(31, 31, 31);
 }
 
 
