--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.cdnfonts.com/css/gameplay');
 
 :root {
-    --border-color: rgb(87, 87, 87);
+    --border-color: rgb(255, 255, 255);
     --height-dino: 8vh;
     --heightJUMP-dino: 25vh;
 }
@@ -46,7 +46,6 @@ body{
 .score{
     font-size: 23px;
     color: var(--border-color);
-    opacity: 70%;
     position: absolute;
     top: 3vh;
     right: 3vh;
@@ -126,8 +125,11 @@ body{
         transform: rotate(-10deg);
         margin-bottom: var(--heightJUMP-dino);
     }
-    90%{
-        transform: rotate(0deg);
+    50%{
+        margin-bottom: calc(var(--heightJUMP-dino) + 1vh);
+    }
+    100%{
+        transform: rotate(10deg);
         margin-bottom: var(--height-dino);
     }
 }
@@ -191,7 +193,6 @@ body{
 
     .score{
         font-size: 15px;
-        opacity: 70%;
     }
     .gameOverTela{
         font-size: 100%;
