--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.cdnfonts.com/css/gameplay');
 
 :root {
-    --shadow-color: rgb(0, 0, 0);
+    --shadow-color: #18071f;
 }
 
 * {
@@ -10,19 +10,25 @@
     user-select: none;
 }
 
+html, body {
+    height: 100%;
+    overflow: hidden;
+}
+
 body {
+    position: relative;
     font-family: gameplay;
     display: flex;
     justify-content: center;
     align-items: center;
     background-size: auto 100%;
     background-position: bottom;
-    height: 100vh;
     width: 100vw;
-    overflow: hidden;
+    background: grey;
 }
 
 .container-menu {
+    position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -37,7 +43,7 @@ body {
 }
 
 .container-menu .titulo {
-    color: rgb(228, 119, 30);
+    color: #5ABBF3;
     font-size: 80px;
     text-shadow: 0px 1px 0px var(--shadow-color), 0px 3px 0px var(--shadow-color),
                  0px 4px 0px var(--shadow-color), 0px 5px 0px var(--shadow-color),
@@ -51,6 +57,12 @@ body {
     transition: 1s ease-in-out;
 }
 
+.mute{
+    scale: 0.8;
+}
+.info{
+    scale: 0.6;
+}
 .container-menu .titulo:hover {
     transform: scale(1.5);
     cursor: pointer;
@@ -70,18 +82,20 @@ a {
 }
 
 button {
+    background: none;
     border: none;
-    margin: 20px;
+    margin: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 150px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    animation: surgindo 1s ease-out;
+    animation: surgindo 0.7s ease-out;
 }
 
 button:hover {
-    transform: scale(1.1);
+    filter: brightness(200%);
+    transform: scale(1.2);
     cursor: pointer;
 }
 
@@ -93,6 +107,10 @@ button:hover {
 .container-menu img:hover {
     width: 95%;
 }
+.container-cred{
+    color: rgb(255, 255, 255);
+    text-align: center;
+}
 
 @keyframes titulo-animation {
     0% {
@@ -102,10 +120,10 @@ button:hover {
     50% {
         rotate: 2deg;
         transform: scale(1.05);
-        text-shadow: 0px -2px 0px var(--shadow-color), 0px -3px 0px var(--shadow-color),
-                     0px -4px 0px var(--shadow-color), 0px -5px 0px var(--shadow-color),
-                     0px -6px 0px var(--shadow-color), 0px -7px 0px var(--shadow-color),
-                     0px -8px 0px var(--shadow-color), 0px -9px 0px var(--shadow-color),
+        text-shadow: 2px -2px 0px var(--shadow-color), 3px -3px 0px var(--shadow-color),
+                     4px -4px 0px var(--shadow-color), 5px -5px 0px var(--shadow-color),
+                     6px -6px 0px var(--shadow-color), 7px -7px 0px var(--shadow-color),
+                     8px -8px 0px var(--shadow-color), 9px -9px 0px var(--shadow-color),
                      0px -10px 0px var(--shadow-color), -6px -6px 0px var(--shadow-color),
                      6px -6px 0px var(--shadow-color), -6px 6px 0px var(--shadow-color),
                      6px 6px 0px var(--shadow-color);
@@ -145,19 +163,30 @@ button:hover {
 
 @keyframes background-animation {
     0% {
+        background-color: #e38df3;
         background-position: left;
     }
-    100% {
+    25%{
+        background-color: #5ABBF3;
+    }
+    50%{
+        background-color: #ece55f;
+    }
+    75% {
+        background-color: #5AF35A;
+    }
+    100%{
+        background-color: #e38df3;
         background-position: right;
     }
 }
 
 .cactos {
-    bottom: 18.5vh;
     position: absolute;
+    bottom: 18.5vh;
     display: flex;
     justify-content: space-between;
-    width: 200vw;
+    width: 200%;
     height: 10vh;
     animation: obstacle-animation 4s infinite linear;
 }
@@ -166,18 +195,23 @@ button:hover {
     width: 4vw;
 }
 
+img {
+    pointer-events: auto;
+    user-drag: none;
+    -webkit-user-drag: none;
+}
 @keyframes obstacle-animation {
     0% {
-        margin-left: 0%;
+        left: 0%;
     }
     100% {
-        margin-left: -130%;
+        left: -130%;
     }
 }
 
 .dinos {
-    bottom: 18.5vh;
     position: absolute;
+    bottom: 18.5vh;
     display: flex;
     justify-content: space-between;
     width: 14vw;
@@ -187,10 +221,10 @@ button:hover {
 
 @keyframes dinosmenu {
     0% {
-        margin-left: -130%;
+        left: -130%;
     }
     100% {
-        margin-left: 100%;
+        left: 100%;
     }
 }
 
@@ -231,9 +265,8 @@ button:hover {
 @media(max-width: 620px) {
     body {
         display: flex;
-        flex-direction: column;
-        justify-content: end;
-        align-items: start;
+        width: 100vw;
+        height: 100vh;
     }
     .dinos {
         width: 50vw;
